BUGFIX: Prevent selection overlay when shift selecting thumbnails

--- a/packages/media-module/src/components/Main/ListViewItem.module.css
+++ b/packages/media-module/src/components/Main/ListViewItem.module.css
@@ -7,7 +7,7 @@
 }
 
 .listViewItem:hover {
-    background-color: var(--theme-colors-PrimaryBlue);
+    color: var(--theme-colors-PrimaryBlueHover);
 }
 
 .selected {
